; ModuleID = '/home/carl/AnghaBench/sway/sway/tree/extr_view.c_view_handle_surface_new_subsurface.c'
source_filename = "/home/carl/AnghaBench/sway/sway/tree/extr_view.c_view_handle_surface_new_subsurface.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_view = type { i32 }
%struct.wl_listener = type { i32 }
%struct.wlr_subsurface = type { i32 }

@surface_new_subsurface = common dso_local global i32 0, align 4
@view = common dso_local global %struct.sway_view* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wl_listener*, i8*)* @view_handle_surface_new_subsurface to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @view_handle_surface_new_subsurface(%struct.wl_listener* %0, i8* %1) #0 {
  %3 = alloca %struct.wl_listener*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.sway_view*, align 8
  %6 = alloca %struct.wlr_subsurface*, align 8
  store %struct.wl_listener* %0, %struct.wl_listener** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load %struct.wl_listener*, %struct.wl_listener** %3, align 8
  %8 = load %struct.sway_view*, %struct.sway_view** %5, align 8
  %9 = ptrtoint %struct.sway_view* %8 to i32
  %10 = load i32, i32* @surface_new_subsurface, align 4
  %11 = call %struct.sway_view* @wl_container_of(%struct.wl_listener* %7, i32 %9, i32 %10)
  store %struct.sway_view* %11, %struct.sway_view** %5, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = bitcast i8* %12 to %struct.wlr_subsurface*
  store %struct.wlr_subsurface* %13, %struct.wlr_subsurface** %6, align 8
  %14 = load %struct.sway_view*, %struct.sway_view** %5, align 8
  %15 = load %struct.wlr_subsurface*, %struct.wlr_subsurface** %6, align 8
  %16 = call i32 @view_subsurface_create(%struct.sway_view* %14, %struct.wlr_subsurface* %15)
  ret void
}

declare dso_local %struct.sway_view* @wl_container_of(%struct.wl_listener*, i32, i32) #1

declare dso_local i32 @view_subsurface_create(%struct.sway_view*, %struct.wlr_subsurface*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
